testing/tests/00main/errors/invalid_ret_syntax_2.sasc
//! BUILD_EXIT_CODE=1

fn main() {
	return = 0;
}